# slate

./: .gitignore  Cargo.toml  README.md  set_logging.sh
.github/: copilot-instructions.md
src/: content_manager.rs  file_system.rs  main.rs  server.rs  stats.rs  templating.rs  types.rs  web_content.rs
