[package]
name = "slate"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.10"
log = "0.4"
markdown = "1.0.0-alpha.23"
notify = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
